# synthetic_conversation

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
seed_data/: dialogsum_final_eval.json  example_calls.json  topics.json
src/generation/: config.py  utils.py
src/generation/seeded_chain/: call_script_generation.py  models.py
src/generation/seeded_chain/prompts/: __init__.py  generation_resolved_de_instruct.py  generation_resolved_en_instruct.py  generation_unresolved_de_instruct.py  generation_unresolved_en_instruct.py  validation_de_instruct.py  validation_en_instruct.py
src/generation/sequential_conversation/: README.md  cleanup_convos.py  conversation_manager.py  customer_agent_creator.py  index_manager.py  main.py  push_to_hf.py  rag_service_agent_creator.py  run_simulation.sh  scenario_loader.py  settings.py  simple_service_agent_creator.py  som_service_agent_creator.py  utils.py
src/generation/sequential_conversation/agentic_simulation_outputs/: conversations_20250217_141002.json  conversations_20250217_141212.json  conversations_20250217_143540.json  conversations_20250217_143643.json  conversations_20250217_143710.json  conversations_20250217_143821.json  conversations_20250217_144152.json  conversations_20250217_144234.json  conversations_20250217_144415.json  conversations_20250217_144449.json  conversations_20250217_144543.json  conversations_20250217_144755.json  conversations_20250217_145450.json  conversations_20250217_150529.json  conversations_20250217_153047.json  conversations_20250217_153709.json  conversations_20250217_154647.json  (+1 more)
(+16 files in other folders)
