[project]
name = "synthetic-conversations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.12.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.7",
    "langchain-google-genai>=2.0.4",
    "langchain-openai>=0.2.9",
    "llama-index-readers-web>=0.3.0",
    "llama-index>=0.12.0",
    "openai>=1.54.4",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
    "llama-index-vector-stores-chroma>=0.4.0",
    "pyautogen>=0.3.2",
    "pyyaml>=6.0.2",
    "loguru>=0.7.2",
    "pandas>=2.2.3",
    "numpy>=1.26.4",
    "tiktoken>=0.8.0",
    "requests>=2.32.3",
    "datasets>=3.1.0",
    "chromadb>=0.5.20",
]
